--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
   --primary-pink: #f28482;
   --primay-yellow: #f6bd60;
   --primary-white: #f7ede2;
-  --primary-blue: cornflowerblue;
+  --primary-blue: #6495ed;
   --pimary--grey: rgb(209, 201, 201)
 
   --second-green: #a1eca2;
